--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:clean": "rm -rf .next && next dev",
     "dev:turbo": "next dev --turbopack",
     "build": "next build",
+    "postinstall": "npm rebuild sharp",
     "start": "next start",
     "lint": "next lint",
     "analyze": "ANALYZE=true next build",
