--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,6 @@
-# Sharp modülü için platform-specific binary yüklemesi
-sharp_binary_host=https://github.com/lovell/sharp-libvips/releases/download/v8.15.1
-sharp_libvips_binary_host=https://github.com/lovell/sharp-libvips/releases/download/v8.15.1
+# Platform-specific ayarları
+platform=linux
+arch=x64
+
+# Sharp için optionals dahil et
+include=optional
