--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.1",
     "lexical": "^0.32.1",
+    "lightningcss": "^1.30.2",
     "lucide-react": "^0.503.0",
     "next": "^15.3.4",
     "next-themes": "^0.4.6",
