--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,8 @@ nixPkgs = ["nodejs_20", "vips"]
 [phases.install]
 cmds = [
   "npm ci --include=optional",
-  "npm install --cpu=x64 --os=linux sharp"
+  "npm install --cpu=x64 --os=linux sharp",
+  "npm install --cpu=x64 --os=linux lightningcss"
 ]
 
 [phases.build]
