--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,8 +4,8 @@ nixPkgs = ["nodejs_20", "vips"]
 [phases.install]
 cmds = [
   "npm ci --include=optional",
-  "npm install --cpu=x64 --os=linux sharp",
-  "npm install --cpu=x64 --os=linux lightningcss"
+  "rm -rf node_modules/sharp node_modules/lightningcss node_modules/@tailwindcss",
+  "npm install --cpu=x64 --os=linux sharp lightningcss @tailwindcss/postcss"
 ]
 
 [phases.build]
