fix build error

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,7 @@ nixPkgs = ["nodejs_20", "vips"]
 
 [phases.install]
 cmds = [
-  "npm ci --include=optional",
+  "npm ci",
   "rm -rf node_modules/sharp node_modules/lightningcss node_modules/@tailwindcss",
   "npm install --cpu=x64 --os=linux sharp lightningcss @tailwindcss/postcss"
 ]
