[CC-53] fix development state and store product

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,2 @@
-NEXT_PUBLIC_WEBSITE_ID=GET_FROM_CRAFTER.NET.TR
-NEXT_PUBLIC_LICENCE_KEY=GET_FROM_CRAFTER.NET.TR
-NEXT_PUBLIC_BACKEND_URL=https://api.crafter.net.tr
-# Eğer build ve app-config hatası alıyorsan NEXT_PUBLIC_BASE_URL değerini http://localhost:3000 olarak ayarla
-NEXT_PUBLIC_BASE_URL="https://demo.crafter.net.tr"
+NEXT_PUBLIC_BACKEND_URL="https://api.crafter.net.tr"
+## For development state NEXT_PUBLIC_WEBSITE_ID="ad4e9e61-cffe-45d0-9c02-25d973685536"
